--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
         		<div id="scorebox">Score: <div id="score"></div>
         		</div>
         		<div id="lives">Lives:
-        			<div id="life1"><img src="images/heart.png" height='20' width='20'></div>
-        			<div id="life2"><img src="images/heart.png" height='20' width='20'></div>
-        			<div id="life3"><img src="images/heart.png" height='20' width='20'></div>
+        			<div id="life1" style="margin-top: 3px;"><img src="images/heart.png" height='20' width='20'></div>
+        			<div id="life2" style="margin-top: 3px;"><img src="images/heart.png" height='20' width='20'></div>
+        			<div id="life3" style="margin-top: 3px;"><img src="images/heart.png" height='20' width='20'></div>
         		</div>
         		<div id="quesbox">Which of these numbers is divisible by <div id="ques"></div>?</div>
         </div>
